--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "next": "12.1.6",
     "next-auth": "^4.6.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sqlite3": "^5.0.8"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "8.18.0",
